[tool.poetry]
name = "render-code"
version = "0.1.0"
description = ""
authors = ["whc <249768447@qq.com>"]
readme = "README.md"
packages = [{include = "render_code"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
dynaconf = "^3.2.1"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
case-convert = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
render-code = "render_code.cli:commands"
